--- a/app/package.json
+++ b/app/package.json
@@ -9,7 +9,7 @@
 		"dev": "concurrently \"npm run dev:vite\" \"npm run dev:server\"",
 		"build": "vite build",
 		"preview": "vite preview --host 0.0.0.0 --port $PORT",
-		"start": "node dist/api/index.js"
+		"start": "node dist/index.js"
 	},
 	"dependencies": {
 		"@assistant-ui/react": "^0.10.24",
